# api/openapi.yaml
@@ -47,14 +47,10 @@ components:
     # User schemas
     User:
       $ref: "./schemas/user.yaml#/User"
-    ServiceStatus:
-      $ref: "./schemas/user.yaml#/ServiceStatus"
     CreateUserRequest:
       $ref: "./schemas/user.yaml#/CreateUserRequest"
     UserResponse:
       $ref: "./schemas/user.yaml#/UserResponse"
-    ServiceStatusResponse:
-      $ref: "./schemas/user.yaml#/ServiceStatusResponse"
 
     # File schemas
     FileType:
@@ -102,8 +98,6 @@ paths:
   # User endpoints
   /user:
     $ref: "./paths/user.yaml#/~1user"
-  /user/status:
-    $ref: "./paths/user.yaml#/~1user~1status"
 
   # File endpoints
   /file/root:
