# pkg/api/v1/oas_response_encoders_gen.go
@@ -661,52 +661,6 @@ func encodeGetRootContainerResponse(response GetRootContainerRes, w http.Respons
 	}
 }
 
-func encodeGetServiceStatusResponse(response GetServiceStatusRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *ServiceStatusResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *GetServiceStatusUnauthorized:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(401)
-		span.SetStatus(codes.Error, http.StatusText(401))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *GetServiceStatusNotFound:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(404)
-		span.SetStatus(codes.Error, http.StatusText(404))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
-	}
-}
-
 func encodeGetStreamTokenResponse(response GetStreamTokenRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *StreamTokenResponse:
